project(strings)

#add_executable(decodway leetcode/decode_ways.cpp)
#add_executable(compareversions leetcode/compare_version_numbers.cpp)
#add_executable(issubsequence leetcode/is_subsequence.cpp)
#add_executable(minimum_remove_to_make_valid_paranthesis leetcode/minimum_remove_to_make_valid_paranthesis.cpp)
#add_executable(smallest_string_with_a_given_neuric_values leetcode/smallest_string_with_a_given_neumaric_values.cpp)
#add_executable(reverse_string leetcode/reverse_string.cpp)
#add_executable(valid_palindrome_ii leetcode/valid_palindrome_ii.cpp)
#add_executable(remove_palindromic_subsequences leetcode/remove_palindromic_subsequences.cpp)
#add_executable(delete_operations_for_two_strings leetcode/delete_operations_for_two_strings.cpp)
#add_executable(prefix_and_suffix_search leetcode/prefix_and_suffix_search.cpp)
#add_executable(search_suggestion_system leetcode/search_suggestion_system.cpp)
#add_executable(short_encoding_of_words src/short_encoding_of_words.cpp)
#add_executable(number_of_matching_subsequences src/number_of_matching_subsequences.cpp)
add_executable(word_ladder src/word_ladder.cpp)