project(trees)

#add_executable(maxwidth leetcode/maximum_width_of_btree.cpp)
#add_executable(searchinabtre leetcode/search_in_a_btree.cpp)
#add_executable(trimabtree leetcode/trim_a_btree.cpp)
#add_executable(convertbsttogreatertree leetcode/convert_bst_to_greater_tree.cpp)
#add_executable(increasingorder leetcode/increasing_order_search_tree.cpp)
#add_executable(kthsmallest_element leetcode/kth_smallest_element_in_bst.cpp)
#add_executable(recoverbst leetcode/recover_bst.cpp)
#add_executable(recoverbst2 leetcode/recover_bst_2.cpp)
#add_executable(deepest_leaves_sum leetcode/deepest_leaves_sum.cpp)
#add_executable(find_the_corresponding_node_of_a_btree_in_a_clone_that_tree
#        leetcode/find_the_corresponding_node_of_a_btree_in_a_clone_that_tree.cpp)
#add_executable(binary_tree_right_side_view leetcode/binary_tree_right_side_view.cpp)
#add_executable(population_next_right_pointers_in_each_node_ii leetcode/population_next_right_pointers_in_each_node_ii.cpp)
#add_executable(binary_tree_level_order_traversal leetcode/binary_tree_level_order_traversal.cpp)
#add_executable(binary_tree_level_order_traversal_ii leetcode/binary_tree_level_order_traversal_ii.cpp)
#add_executable(average_of_levels_in_binary_tree leetcode/average_of_levels_in_binary_tree.cpp)
add_executable(construct_btree_from_preorder_and_inorder_traversal src/construct_btree_from_preorder_and_inorder_traversal.cpp)