project(dp)

#add_executable(numberofways src/number_of_ways_to_form_a_target_given_a_dictionary.cpp)
#add_executable(maximum_number_of_events_that_can_be_attend_ii src/maximum_number_of_events_that_can_be_attend_ii.cpp)
#add_executable(check_if_there_is_a_valid_partition_for_the_array src/check_if_there_is_a_valid_partition_for_the_array.cpp)
add_executable(extra_charactors_in_a_string src/extra_charactors_in_a_string.cpp)